syntax = "proto3";

package v2ray.core.app.router;
option go_package = "github.com/CoderQuinn/ForgeRules/proto";

message Domain {
  enum Type {
    Plain = 0;
    Regex = 1;
    Domain = 2;
    Full = 3;
  }

  Type type = 1;
  string value = 2;

  message Attribute {
    string key = 1;
    oneof typed_value {
      bool bool_value = 2;
      int64 int_value = 3;
    }
  }

  repeated Attribute attribute = 3;
}

message GeoSite {
  string country_code = 1;
  repeated Domain domain = 2;
}

message GeoSiteList {
  repeated GeoSite entry = 1;
}
